--- a/roint/Makefile
+++ b/roint/Makefile
@@ -2,6 +2,8 @@
 CC=gcc
 RM=rm -f
 
+CFLAGS=-Wall -g -I.
+
 MAJOR_VER=0
 MINOR_VER=1
 
@@ -11,7 +13,9 @@ SHARED_MAJOR=$(SHARED_SO).$(MAJOR_VER)
 SHARED=$(SHARED_MAJOR).$(MINOR_VER)
 STATIC=roint.a
 
-SRC=act.cc gat.cc grf.cc ro.cc rsm.cc spr.cc constants.cc gnd.cc object.cc ro_strings.cc rsw.cc
+SRC=act.cc gat.cc grf.cc ro.cc rsm.cc spr.cc constants.cc gnd.cc \
+	object.cc ro_strings.cc rsw.cc \
+	python/pyspr.cc python/pyrsm.cc
 
 SHARED_OBJ=$(SRC:%.cc=%.lo)
 
@@ -29,8 +33,14 @@ clean:
 	$(RM) $(SHARED_OBJ) $(STATIC_OBJ)
 	$(RM) $(SHARED) $(STATIC)
 
+python/%.lo: python/%.cc
+	$(CC) -fPIC $(CFLAGS) -c -o $@ $<
+
 %.lo: %.cc
-	$(CC) -fPIC -g -c -Wall -o $@ $<
+	$(CC) -fPIC $(CFLAGS) -c -o $@ $<
+
+python/%.o: python/%.cc
+	$(CC) $(CFLAGS) -c -o $@ $<
 
 %.o: %.cc
-	$(CC) -g -c -Wall -o $@ $<
+	$(CC) $(CFLAGS) -c -o $@ $<
