--- a/roint/roint.vcproj
+++ b/roint/roint.vcproj
@@ -18,7 +18,7 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			OutputDirectory="$(SolutionDir)..\$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
 			CharacterSet="1"
@@ -42,7 +42,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="$(SolutionDir)win32_env\include"
+				AdditionalIncludeDirectories="$(SolutionDir)..\win32_env\include"
 				PreprocessorDefinitions="WIN32;_DEBUG"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="2"
@@ -61,8 +61,8 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="zlib.lib"
-				AdditionalLibraryDirectories="$(SolutionDir)win32_env\lib"
-				ImportLibrary="$(SolutionDir)\$(ConfigurationName)\rointd.dll.lib"
+				AdditionalLibraryDirectories="$(SolutionDir)..\win32_env\lib"
+				ImportLibrary="$(SolutionDir)\..\$(ConfigurationName)\rointd.dll.lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -345,6 +345,10 @@
 				RelativePath=".\python\pyspr.cc"
 				>
 			</File>
+			<File
+				RelativePath=".\python\pystrings.cc"
+				>
+			</File>
 			<Filter
 				Name="Header"
 				>
@@ -354,6 +358,10 @@
 				</File>
 				<File
 					RelativePath=".\python\pyspr.h"
+					>
+				</File>
+				<File
+					RelativePath=".\python\pystrings.h"
 					>
 				</File>
 			</Filter>
