--- a/rogl/msvc2008/rogl.vcproj
+++ b/rogl/msvc2008/rogl.vcproj
@@ -1,10 +1,10 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
-	Name="roint"
-	ProjectGUID="{D9193DAC-5699-422E-98B0-51FC86E55D39}"
-	RootNamespace="roint"
+	Name="rogl"
+	ProjectGUID="{BE23FBA1-E38F-4461-9EF6-0C0398E2C142}"
+	RootNamespace="rogl"
 	Keyword="ManagedCProj"
 	TargetFrameworkVersion="196613"
 	>
@@ -18,8 +18,8 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(ProjectDir)..\$(ConfigurationName)\"
-			IntermediateDirectory="$(ProjectDir)$(ConfigurationName)\"
+			OutputDirectory="$(ProjectDir)..\$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
 			CharacterSet="1"
 			ManagedExtensions="1"
@@ -42,11 +42,10 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="$(ProjectDir)..\;$(ProjectDir)..\win32_env\include"
+				AdditionalIncludeDirectories="$(ProjectDir)..\"
 				PreprocessorDefinitions="WIN32;_DEBUG"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="1"
-				PrecompiledHeaderThrough="StdAfx.h"
 				PrecompiledHeaderFile="$(ProjectDir)$(ConfigurationName)\$(TargetName).pch"
 				WarningLevel="3"
 				DebugInformationFormat="3"
@@ -62,10 +61,13 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="zlib.lib"
+				AdditionalDependencies="rointd.dll.lib"
 				OutputFile="$(ProjectDir)\..\$(ConfigurationName)\$(ProjectName).dll"
-				AdditionalLibraryDirectories="$(ProjectDir)..\win32_env\lib"
-				ImportLibrary="$(ProjectDir)\..\$(ConfigurationName)\rointd.dll.lib"
+				LinkIncremental="2"
+				AdditionalLibraryDirectories="$(ProjectDir)..\..\roint\$(ConfigurationName)\"
+				GenerateDebugInformation="true"
+				AssemblyDebug="1"
+				TargetMachine="1"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -91,7 +93,7 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			OutputDirectory="$(ProjectDir)..\$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
 			CharacterSet="1"
@@ -115,7 +117,6 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="$(ProjectDir)..\win32_env\include"
 				PreprocessorDefinitions="WIN32;NDEBUG"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="2"
@@ -133,12 +134,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="zlib.lib"
+				AdditionalDependencies="roint.dll.lib"
 				OutputFile="$(ProjectDir)\..\$(ConfigurationName)\$(ProjectName).dll"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="$(ProjectDir)..\win32_env\lib"
+				AdditionalLibraryDirectories="$(ProjectDir)..\..\roint\$(ConfigurationName)\"
 				GenerateDebugInformation="true"
-				ImportLibrary="$(ProjectDir)\..\$(ConfigurationName)\roint.dll.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -180,16 +180,6 @@
 			AssemblyName="System.Xml, Version=2.0.0.0, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL"
 			MinFrameworkVersion="131072"
 		/>
-		<AssemblyReference
-			RelativePath="System.Drawing.dll"
-			AssemblyName="System.Drawing, Version=2.0.0.0, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL"
-			MinFrameworkVersion="131072"
-		/>
-		<AssemblyReference
-			RelativePath="System.Windows.Forms.dll"
-			AssemblyName="System.Windows.Forms, Version=2.0.0.0, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL"
-			MinFrameworkVersion="131072"
-		/>
 	</References>
 	<Files>
 		<Filter
@@ -198,51 +188,11 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\act.cc"
+				RelativePath=".\AssemblyInfo.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\AssemblyInfo.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\constants.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\gat.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\gnd.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\grf.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\object.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\ro.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\ro_strings.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\rsm.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\rsw.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\spr.cc"
+				RelativePath="..\rogl.cpp"
 				>
 			</File>
 			<File
@@ -256,31 +206,11 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath="..\constants.h"
-				>
-			</File>
-			<File
-				RelativePath="..\cp949.h"
-				>
-			</File>
-			<File
-				RelativePath="..\impdecl.h"
-				>
-			</File>
-			<File
-				RelativePath="..\object.h"
-				>
-			</File>
-			<File
 				RelativePath=".\resource.h"
 				>
 			</File>
 			<File
-				RelativePath="..\ro.h"
-				>
-			</File>
-			<File
-				RelativePath="..\ro_strings.h"
+				RelativePath="..\rogl.h"
 				>
 			</File>
 			<File
@@ -301,74 +231,6 @@
 				RelativePath=".\app.rc"
 				>
 			</File>
-		</Filter>
-		<Filter
-			Name="ROTypes"
-			>
-			<File
-				RelativePath="..\act.h"
-				>
-			</File>
-			<File
-				RelativePath="..\gat.h"
-				>
-			</File>
-			<File
-				RelativePath="..\gnd.h"
-				>
-			</File>
-			<File
-				RelativePath="..\grf.h"
-				>
-			</File>
-			<File
-				RelativePath="..\rsm.h"
-				>
-			</File>
-			<File
-				RelativePath="..\rsw.h"
-				>
-			</File>
-			<File
-				RelativePath="..\spr.h"
-				>
-			</File>
-			<File
-				RelativePath="..\struct_io.h"
-				>
-			</File>
-		</Filter>
-		<Filter
-			Name="Python"
-			>
-			<File
-				RelativePath="..\python\pyrsm.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\python\pyspr.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\python\pystrings.cc"
-				>
-			</File>
-			<Filter
-				Name="Header"
-				>
-				<File
-					RelativePath="..\python\pyrsm.h"
-					>
-				</File>
-				<File
-					RelativePath="..\python\pyspr.h"
-					>
-				</File>
-				<File
-					RelativePath="..\python\pystrings.h"
-					>
-				</File>
-			</Filter>
 		</Filter>
 		<File
 			RelativePath="..\readme.txt"
