ROGL Major update (RSW Drawing functional) ROInt fixed leaks, updated GND tile retrieval method (removed coordinate retrieval -- made no sense), protected some read-only variables.

--- a/rogl/msvc2008/rogl.vcproj
+++ b/rogl/msvc2008/rogl.vcproj
@@ -205,6 +205,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\rswgl.cc"
+				>
+			</File>
+			<File
 				RelativePath="..\stdafx.cpp"
 				>
 			</File>
@@ -236,6 +240,10 @@
 			</File>
 			<File
 				RelativePath="..\rsmgl.h"
+				>
+			</File>
+			<File
+				RelativePath="..\rswgl.h"
 				>
 			</File>
 			<File
