Improved functionality of gl_object. Improved functionality of base_cache. Created Texture, Texture::Pointer and Texture::PointerCache objects for better handling textures. Created SDLEngine::LookAt routine Correctly draws GND and RSW models.

--- a/roengine/msvc9/roengine.vcproj
+++ b/roengine/msvc9/roengine.vcproj
@@ -414,6 +414,14 @@
 				RelativePath="..\objects\rsm_object.h"
 				>
 			</File>
+			<File
+				RelativePath="..\objects\rsw_object.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\objects\rsw_object.h"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
